fix: horizontal overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@
 /* BASE STYLING */
 @layer base {
   html {
-    @apply bg-background text-foreground selection:bg-accent selection:text-background overflow-y-scroll scroll-smooth antialiased;
+    @apply bg-background text-foreground selection:bg-accent selection:text-background overflow-x-hidden overflow-y-scroll scroll-smooth antialiased;
   }
   body {
     --z-old: 1;
